src/assets/css/style.css
* {
  font-family: "Arial";
}

.initial {
  background: linear-gradient(
    0deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(223, 236, 252, 1) 33%,
    rgba(207, 226, 250, 1) 50%,
    rgba(207, 226, 250, 1) 68%
  );
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.page {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 7px;
  font-family: "Arial";
}

.back-button {
  width: 41px;
  height: 41px;
  position: absolute;
  left: 0;
  margin: 9px 0 0 23px;
}

.burger-button {
  margin-top: 50px;
  margin-left: 2px;
  margin-bottom: 10px;
  width: 40%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.footer-text {
  font-size: 14px;
  margin-top: 26px;
  bottom: 30px;
  display: flex;
  justify-content: center;
}

.logo-mini {
  width: 51px;
  height: 59px;
}

.footer {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translate(-50%, 0);
}

.text-head {
  font-weight: normal;
  font-size: 30px;
  line-height: 39px;
  line-height: 100%;
  font-weight: 700;
  margin: 145px 0px 10px 0px;
}

.sub-text {
  font-size: 16px;
  margin-top: 30px;
  position: relative;
  max-width: 500px;
  margin-left: 20px;
  margin-bottom: 57px;
  font-weight: 500;
  color: #8391a1;
}

